updated mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -21,8 +21,11 @@
         crossorigin="anonymous">
 
     <!-- ==============================================
-	CSS
+	CSS/JQuery
     =============================================== -->
+    <!-- JQuery -->
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
     <!-- Materialize -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
@@ -176,32 +179,26 @@
                     <div class="row">
 
                         <!-- FILTER SELECTORS -->
-
-
-
-
-
-
-                        <!-- FILTER SELECTORS -->
                         <div class="col s12 right-align button-group filters-button-group">
-                            <span class="header center-align button is-checked" data-filter="*">
+                            <span class="center-align button is-checked" data-filter="*">
                                 ALL
                                 <span class="projects-slashes">
                                     |
                                 </span>
                             </span>
-                            <span class="header center-align button" data-filter=".front-end">
+                            <span class="center-align button" data-filter=".front-end">
                                 FRONT END
                                 <span class="projects-slashes">
                                     |
                                 </span>
                             </span>
-                            <span class="header center-align button" data-filter=".full-stack">
+                            <span class="center-align button" data-filter=".full-stack">
                                 FULL STACK
                             </span>
                         </div>
 
-<br><br><br>
+                    </div>
+                    <div class="row">
 
 
                         <!-- PROJECT -->
@@ -396,9 +393,6 @@
     <!-- ==============================================
     SCRIPTS
     =============================================== -->
-    <!-- JQuery -->
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-        crossorigin="anonymous"></script>
     <!-- Isotope.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.isotope/3.0.6/isotope.pkgd.min.js" integrity="sha256-CBrpuqrMhXwcLLUd5tvQ4euBHCdh7wGlDfNz8vbu/iI="
         crossorigin="anonymous"></script>
