fixed isotope scaling

--- a/index.html
+++ b/index.html
@@ -394,8 +394,7 @@
     SCRIPTS
     =============================================== -->
     <!-- Isotope.js -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.isotope/3.0.6/isotope.pkgd.min.js" integrity="sha256-CBrpuqrMhXwcLLUd5tvQ4euBHCdh7wGlDfNz8vbu/iI="
-        crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
     <!-- Linking JavaScript -->
     <script src="assets/javascript/app.js"></script>
 </body>
