modified smooth scroll feature

--- a/index.html
+++ b/index.html
@@ -96,8 +96,6 @@
         </div>
     </div>
 
-
-
     <!-- ==============================================
 	ABOUT
     =============================================== -->
@@ -113,7 +111,6 @@
                         bring applications to life.
                     </h5>
                 </div>
-
 
                 <div class="col s12">
                     <div id="hide-about-icons" class="row">
@@ -142,11 +139,8 @@
                             </div>
                         </div>
 
-
                     </div>
                 </div>
-
-
 
                 <div id="resume-button" class="col s12">
                     <div class="row">
@@ -175,7 +169,6 @@
                 </div>
 
                 <div class="container">
-
                     <div class="row">
 
                         <!-- FILTER SELECTORS -->
@@ -198,8 +191,9 @@
                         </div>
 
                     </div>
-                    <div class="row">
 
+                    <!-- ISOTOPE GRID -->
+                    <div class="row">
 
                         <!-- PROJECT -->
                         <div class="grid">
@@ -312,12 +306,9 @@
                         </div>
 
                     </div>
-
-
                 </div>
             </div>
         </div>
-
 
         <!-- ==============================================
         FOOTER
@@ -327,10 +318,7 @@
                 <div class="row">
                     <div class="col s12">
                         <h5 class="white-text">Thanks for visiting my page!</h5>
-                        <p class="grey-text text-lighten-4">Don't hesitate to contact me for projects, employment,
-                            or
-                            just
-                            talking tech!</p>
+                        <p class="grey-text text-lighten-4">Don't hesitate to contact me for projects, employment, or just talking tech!</p>
                     </div>
                 </div>
 
