adjusted nav color change

--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
             <div id="hello-content" class="row" data-aos="zoom-in" data-aos-delay="500" data-aos-duration="2000">
                 <div class="col s12 m12 l12 xl12">
                     <div>
-                        <h6>Hi, I'm</h6>
-                        <h4>MASON VICKERY</h4>
-                        <h6>I'm a web developer.</h6>
+                        <p class="small-text">Hi, I'm</p>
+                        <p class="big-text">MASON VICKERY</p>
+                        <p class="small-text">I'm a web developer.</p>
                     </div>
                 </div>
             </div>
@@ -251,7 +251,7 @@
                             </div>
 
                             <!-- PROJECT -->
-                            <div class="col s12 m6 l4 element-item front-end" data-category="front-end">
+                            <div class="col s12 m6 l4 element-item front-end" data-category="front-end" data-aos="fade-up-right" data-aos-delay="500" data-aos-duration="1000" data-aos-once="true">
                                 <div class="card">
                                     <div class="card-image waves-effect waves-block waves-light">
                                         <img class="activator" src="assets/images/roulette.jpg">
